cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
#set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)

set(LUA_VERSION "5.4.6" CACHE STRING "Lua Version")

project(lua VERSION ${LUA_VERSION} DESCRIPTION "Lua cmake")

list(APPEND CMAKE_PREFIX_PATH ${BASS_DIR})
set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

if(NOT EXISTS ${SRC_DIR})
    set(DOWNLOAD_FILE ${CMAKE_CURRENT_BINARY_DIR}/lua.zip)
    set(EXTRACTED_FOLDER ${CMAKE_CURRENT_BINARY_DIR}/lua)
    set(LUA_SRC ${EXTRACTED_FOLDER}/lua-${LUA_VERSION}/src)

    file(DOWNLOAD https://www.lua.org/ftp/lua-${LUA_VERSION}.tar.gz ${DOWNLOAD_FILE} SHOW_PROGRESS)
    file(ARCHIVE_EXTRACT INPUT ${DOWNLOAD_FILE} DESTINATION ${EXTRACTED_FOLDER})

    file(GLOB LUA_HEADERS ${LUA_SRC}/*.h ${LUA_SRC}/*.hpp)
    file(GLOB LUA_SOURCES ${LUA_SRC}/*.c)
    file(MAKE_DIRECTORY ${SRC_DIR})
    file(COPY ${LUA_HEADERS} DESTINATION ${SRC_DIR})
    file(COPY ${LUA_SOURCES} DESTINATION ${SRC_DIR})
endif()

file(GLOB LUA_HEADERS ${SRC_DIR}/*.h ${SRC_DIR}/*.hpp)
file(GLOB LUA_SOURCES ${SRC_DIR}/*.c)

add_library(${PROJECT_NAME} STATIC ${LUA_SOURCES} ${LUA_HEADERS})

install(
    FILES ${LUA_HEADERS}
    DESTINATION include/
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}-targets
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    RUNTIME DESTINATION bin
    INCLUDES DESTINATION include
)

install(
    EXPORT ${PROJECT_NAME}-targets
    FILE ${PROJECT_NAME}Config.cmake
    NAMESPACE ${PROJECT_NAME}::
    DESTINATION lib/cmake/${PROJECT_NAME}
)